[gd_scene load_steps=3 format=2]

[ext_resource path="res://bullets/Bullet.gd" type="Script" id=1]
[ext_resource path="res://effects/Explosion.tscn" type="PackedScene" id=2]

[node name="Bullet" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 15
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable" ]
speed = null
damage = null
lifetime = null
steer_force = 0

[node name="Sprite" type="Sprite" parent="." index="0"]

[node name="LifeTime" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

[node name="Explosion" parent="." index="3" instance=ExtResource( 2 )]

visible = false
scale = Vector2( 0.5, 0.5 )
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]

[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]

[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]


